feat: edit README, Create images file, fill broken images

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <div class="movies">
     
   </div>
-  <div class="btn">More..</div>
+  <div class="wrap">
+    <div class="btn">More..</div>
+  </div>
 </body>
 </html>
