--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
-    <div class="search-box">
-      <input class="search-input" type="text" />
-      <button class="search-btn">검색</button>
-    </div>
+    <form name="search" class="search-container">
+      <input class="search-input" type="search" />
+      <div action="" class="selects">
+        <select class="select-type" name="" id="">
+          <option value="movie">movie</option>
+          <option value="series">series</option>
+          <option value="episode">episode</option>
+        </select>
+        <select class="select-num" name="" id="">
+          <option value="0">10</option>
+          <option value="1">20</option>
+          <option value="2">30</option>
+        </select>
+        <select class="select-year" name="years" id="">
+          <option value="" selected>All Years</option>
+          <!-- option -->
+        </select>
+      </div>
+      <input type="submit" value="search" name="submit" class="search-btn" />
+    </form>
     <div class="movies">
       <!-- Movie items -->
     </div>
