--- a/index.html
+++ b/index.html
@@ -6,25 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./main.css" />
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
     <script defer src="./main.js"></script>
+    <!-- <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    ></script> -->
   </head>
   <body>
-    <input name="title" id="searching" type="text" placeholder="제목 입력" />
-    <select class="paging" onchange="selectedPage(this)">
-      <option value="1">10</option>
-      <option value="2">20</option>
-      <option value="3">30</option>
-    </select>
-    <select class="year" onchange="selectedYear(this)">
-      <option value="">All Years</option>
-    </select>
-    <button type="submit" id="searching">검색</button>
+    <header>
+      <button><a href="#/search"></a>search</button>
+      <button><a href="#/detail"></a>movie</button>
 
-    <div class="movies">
-      <!-- Movie items -->
+      <input
+        name="title"
+        id="searching"
+        type="text"
+        placeholder="제목 입력"
+        onkeyup="if(window.event.keyCode==13){renderSearchList()}"
+      />
+      <select class="paging">
+        <option value="1">10</option>
+        <option value="2">20</option>
+        <option value="3">30</option>
+      </select>
+      <select class="year">
+        <option value="">All Years</option>
+      </select>
+      <button type="submit" id="searching">검색</button>
+    </header>
+    <div class="movies-list">
+      <div class="movies">
+        <!-- Movie items -->
+      </div>
+      <div class="actions">
+        <div class="btn more">More..</div>
+      </div>
     </div>
-    <div class="actions">
-      <div class="btn">More..</div>
+
+    <div class="movie-detail">
+      <!-- Movie details -->
     </div>
   </body>
 </html>
