--- a/movie.html
+++ b/movie.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/movie.css" />
-    <script defer src="./js/movie.js"></script>
+    <script defer type="module" src="./js/movie.js"></script>
   </head>
   <body>
+    <a href="/#">링크</a>
     <div class="movie-container">
       <div class="poster"></div>
       <div class="movie-info">
