221106 - style수정, readme 작성 중

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <h1><a href="#/search">SearchMovies.com</a></h1>
-      <div class="btns row justify-content-start">
-        <div class="col-3">
+      <div class="btns row">
+        <div class="col">
           <button type="button" class="btn btn-outline-light">
             <a href="#/search">search</a>
           </button>
@@ -80,7 +80,7 @@
       <div class="bottom"></div>
     </footer>
 
-    <div class="movie-detail container-md">
+    <div class="movie-detail container-sm">
       <div class="detail-loading hidden">
         <div
           class="spinner-border text-secondary"
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-5">
+        <div class="col-xl-4">
           <div class="skeletons hidden">
             <div class="skeleton_poster"></div>
           </div>
@@ -102,7 +102,7 @@
           />
         </div>
 
-        <div class="detail-info col-7">
+        <div class="detail-info col-xl-7">
           <div class="skeletons hidden">
             <h1 class="skeleton_text skeleton_title_info"></h1>
             <p class="skeleton_text skeleton_info"></p>
@@ -135,6 +135,7 @@
           </div>
         </div>
       </div>
+      <div class="row"></div>
     </div>
   </body>
 </html>
