--- a/index.html
+++ b/index.html
@@ -7,38 +7,55 @@
     <title>OMDB API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="icon" href="favicon.png" />
+
+    <!-- Bootstrap  -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/movie.css" />
-    <!-- <link rel="stylesheet" href="./movie.css" /> -->
     <script defer type="module" src="./js/main.js"></script>
-    <!-- <script defer type="module" src="./js/movie.js"></script> -->
   </head>
   <body>
     <header>
       <div class="inner">
-        <a href="#" class="logo"><img src="./images/logo2.png" alt="Naver Series" /></a>
+        <a href="" class="logo"><img src="./images/logo2.png" alt="Naver Series" /></a>
         <ul class="menu">
           <li><a href="#search">Search</a></li>
           <li><a href="#movie">Movie</a></li>
-          <li><a href="#about">About</a></li>
         </ul>
       </div>
     </header>
     <form name="search" class="search-container">
       <div class="inner">
-        <input class="search-input" type="search" />
+        <input
+          class="search-input form-control form-control-sm"
+          type="text"
+          placeholder="Search for Movies, Series & more"
+          aria-label=".form-control-sm example"
+        />
         <div action="" class="selects">
-          <select class="select-type" name="" id="">
+          <select class="form-select form-select-sm select-type" aria-label=".form-select-lg example">
             <option value="movie">movie</option>
             <option value="series">series</option>
             <option value="episode">episode</option>
           </select>
-          <select class="select-num" name="" id="">
+          <select class="form-select form-select-sm select-num" aria-label=".form-select-lg example">
             <option value="0">10</option>
             <option value="1">20</option>
             <option value="2">30</option>
           </select>
-          <select class="select-year" name="years" id="">
+          <select class="form-select form-select-sm select-year" aria-label=".form-select-lg example">
             <option value="" selected>All Years</option>
             <!-- option -->
           </select>
@@ -47,16 +64,38 @@
       </div>
     </form>
 
+    <!-- 영화 상세페이지 스켈레톤 -->
+    <div class="skeletons hidden">
+      <div class="loading">
+        <div class="spinner-border spinner-border-sm" role="status"></div>
+      </div>
+
+      <div class="skeleton poster"></div>
+      <div class="specs">
+        <div class="skeleton title"></div>
+        <div class="skeleton spec"></div>
+        <div class="skeleton plot"></div>
+        <div class="skeleton etc"></div>
+        <div class="skeleton etc"></div>
+        <div class="skeleton etc"></div>
+      </div>
+    </div>
+
+    <!-- 영화 상세페이지 -->
     <div class="movie-detail">
       <!-- Movie details -->
     </div>
 
+    <!-- 메인 페이지 -->
     <div class="movies">
       <!-- Movie items -->
     </div>
 
     <div class="actions">
-      <div class="btn__more">More..</div>
+      <div class="btn__more btn__more--green">
+        <span>More</span>
+        <div class="spinner-border spinner-border-sm" role="status" id="more-loading"></div>
+      </div>
     </div>
   </body>
 </html>
