--- a/index.html
+++ b/index.html
@@ -38,35 +38,40 @@
         <h3>Ready to watch? Please enter a movie title.</h3>
         <div class="user-input">
           <form action="">
-            <input type="search" class='input-search' placeholder='Search whatever you want'>
+            <input type="search" class='input-search' placeholder='Search for Movies, Series & more'>
+            <select name="select-genre" id="select-genre">
+              <option value="movie">movie</option>
+              <option value="series">series</option>
+              <option value="episode">episode</option>
+            </select>
+            <select name="select-year" id="select-year">
+              <!-- value값이 비어있다는 건 전체 option을 선택하는 것 -->
+              <option value="">All year</option>
+            </select>
+            <select name="select-number" id="select-number">
+              <option value="">10</option>
+              <option value="20">20</option>
+              <option value="30">30</option>
+            </select>
+            <button class='search-btn' type="submit">Search</button>
           </form>
-          <select name="select-genre" id="select-genre">
-            <option value="movie">movie</option>
-            <option value="series">series</option>
-            <option value="episode">episode</option>
-          </select>
-          <select name="select-year" id="select-year">
-            <!-- value값이 비어있다는 건 전체 option을 선택하는 것 -->
-            <option value="">All year</option>
-          </select>
-          <select name="select-number" id="select-number">
-            <option value="">10</option>
-            <option value="20">20</option>
-            <option value="30">30</option>
-          </select>
-          <button class='search-btn' type="submit">Search</button>
         </div>
       </div>
     </div>
     <!-- movies 출력-->
-    <div class="movies"></div>
+    <div class="movies-container">
+      <div class="movies">
+        <p>Search for the movie title!</p>
+      </div>
+      <div class="movies-loading hidden">Loading...</div>
+      <div class="more-btn hidden">More..</div>
+    </div>
     <!-- 개별 movie 상세 페이지 -->
     <div class="movie-detail"></div>
     <div class="actions">
-      <div class="more-btn">More..</div>
-    </div>
-    <div class="loader-containter hidden">
-      <div class="loader"></div>
+      <div class="loader-containter hidden">
+        <div class="loader"></div>
+      </div>
     </div>
   </main>
 </body>
